syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";
import "material_return_cause.proto";

message MaterialReturnSolutionInfo{
    string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //备注
    string remark=4;
    //退料原因
    repeated MaterialReturnSolutionAvailableCauseInfo materialReturnCauses=5;
}

message MaterialReturnSolutionAvailableCauseInfo{
    string id=1;
    string materialReturnSolutionID=2;
    string materialReturnCauseID=3;
    MaterialReturnCauseInfo materialReturnCause=4;
}

message QueryMaterialReturnSolutionRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // 代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=4;
}

message QueryMaterialReturnSolutionResponse{
    Code code=1;
    string message=2;
    repeated MaterialReturnSolutionInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialReturnSolutionResponse{
    Code code=1;
    string message=2;
    repeated MaterialReturnSolutionInfo data=3;
}

message GetMaterialReturnSolutionDetailResponse{
    Code code=1;
    string message=2;
    MaterialReturnSolutionInfo data=3;
}